# hackathon

./: .dockerignore  .gitignore  Dockerfile  README.md  client.py  demo.py  demo_policies.py  docker-compose.yml  inference.py  keepalive_server.py  models.py  my_env_v4.py  openenv.yaml  pyproject.toml  requirements.txt
env/: __init__.py  openenv_env.py
grader/: __init__.py  grader.py  task_graders.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  requirements.txt
tasks/: __init__.py  all_tasks.py  task.py
tests/: test_negative_scenarios.py
utils/: logging.py
